feat: add graph-service endpoints; change dsnpId -> msaId; update console.log to logger;
