# backend/controllers/ProfilesController.ts
@@ -1,6 +1,10 @@
 import { Express, Request, Response } from 'express';
 import { BaseController } from './BaseController';
 import { HttpStatusCode } from 'axios';
+import { Components } from '../types/openapi';
+import { AccountService } from '../services/AccountService';
+
+type Profile = Components.Schemas.Profile;
 
 export class ProfilesController extends BaseController {
   constructor(app: Express) {
@@ -8,13 +12,21 @@ export class ProfilesController extends BaseController {
   }
 
   protected initializeRoutes(): void {
-    this.router.get('/:dsnpId', this.getProfile.bind(this));
-    this.router.put('/:dsnpId', this.putProfile.bind(this));
+    this.router.get('/:msaId', this.getProfile.bind(this));
+    this.router.put('/:msaId', this.putProfile.bind(this));
   }
 
-  public getProfile(_req: Request, res: Response) {
-    return res.status(HttpStatusCode.Ok).send();
+  public async getProfile(_req: Request, res: Response) {
+    const Profile: Partial<Profile> = {
+      fromId: _req.params.msaId,
+    }
+    // Use account service to get display handle
+    const { displayHandle } = await AccountService.getInstance().then((service) => service.getAccount(_req.params.msaId));
+    Profile.displayHandle = displayHandle;
+    return res.status(HttpStatusCode.Ok).send(Profile);
   }
+
+
   public putProfile(_res: Request, res: Response) {
     return res.status(HttpStatusCode.Accepted).send();
   }
